# retro-system-monitor-rpi5

./: .gitignore  CMakeLists.txt  README.md
include/: LinuxSystemMonitor.hpp  RpiSystemMonitor.hpp  SystemMonitor.hpp
src/: LinuxSystemMonitor.cpp  RpiSystemMonitor.cpp  main.cpp
webserver/: README.md  app.py  requirements.txt
webserver/templates/: dashboard.html
